--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.08MB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.62MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-449.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-1.05MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.28MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-558.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-329.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-474.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-493.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-382.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-493.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
