--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-329.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-12.08MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-4.10MB/s(Youtube:不良林), server: 194.156.231.237, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.81MB/s(Youtube:不良林), server: 194.156.231.237, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-6.53MB/s(Youtube:不良林), server: 185.160.26.160, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-8.54MB/s(Youtube:不良林), server: 194.156.231.237, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.22MB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-640.3KB/s(Youtube:不良林), server: 89.31.126.171, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-8.77MB/s(Youtube:不良林), server: 89.31.126.31, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 波兰-1.03MB/s(Youtube:不良林), server: 217.30.10.67, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-558.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-733.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 波兰-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
