--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-640.3KB/s(Youtube:不良林), server: 89.31.126.171, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-8.77MB/s(Youtube:不良林), server: 89.31.126.31, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-1.03MB/s(Youtube:不良林), server: 217.30.10.67, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-558.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-733.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-215.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇯🇵 日本-5.31MB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.96MB/s(Youtube:不良林), server: 5.183.176.80, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇮🇳 印度-1.15MB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.80MB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-640.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 波兰-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-733.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
